registerPg-MDB-bcrypts

--- a/burger/jsconfig.json
+++ b/burger/jsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+   
     "paths": {
-      "@/*": ["./src/*"]
+      "@/app*": ["./src/*"],
+      "@/models*": ["./src/models*"],
+      "@/components*": ["./src/components*"],
     }
   }
 }
