--- a/burger/package.json
+++ b/burger/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.7.4",
+    "@aws-sdk/client-s3": "^3.733.0",
     "bcrypt": "^5.1.1",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
